# SmartInventorySim

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Clothing.hpp  Electronic.hpp  Food.hpp  Order.hpp  OrderManager.hpp  Product.hpp  RandomGenerator.hpp  TangibleProduct.hpp  Utils.hpp  Warehouse.hpp
src/: Clothing.cpp  Electronic.cpp  Food.cpp  Order.cpp  OrderManager.cpp  Product.cpp  RandomGenerator.cpp  TangibleProduct.cpp  Utils.cpp  Warehouse.cpp
